# RPi-RRCircuits

./: .gitignore  .gitmodules  4814p-2.lib  48xxP.mod  742C163.mod  74lv125AN.lib  AddAllReadmes.tcl  BBBCapeROM.tcl  C1-3V8.mod  CAY16-J8.mod  CP_Radial_D10.0mm_P5.00mm.kicad_mod  CP_Radial_D4.0mm_P1.50mm.kicad_mod  CP_Radial_D4.0mm_P1.50mm.mod  CP_Radial_D5.00mm_P2.00mm.mod  CP_Radial_D5.0mm_P2.00mm.kicad_mod  Caps.mod  DO15.mod  DWSLogo.lib  DWSLogoBCU.mod  DWSLogoSilk.mod  ESP32Boards.mod  FT231XS-R.lib  Inductors.mod  LICENSE  LPC1754FBD80_551.lib  MCP23xxx.lib  MicroChip.dcm  MicroChip.lib  NewPinArray.mod  PELowProfile.mod  PIN_ARRAY_10X2.mod  PIN_HEADER-8X1.kicad_mod  PartCounts.tcl  README.md  RJ45-8N-S.mod  RSFFDebounce.fzz  R_0805.kicad_mod  R_0805.mod  SMB.mod  SMT8.mod  (+45 more)
16DriverOutputCape/: 16DriverOutputCape-cache.lib  16DriverOutputCape.cmp  16DriverOutputCape.kicad_pcb  16DriverOutputCape.net  16DriverOutputCape.pro  16DriverOutputCape.sch  CapeEEPROM.sch  CapeROMSpec.eeprom  README.md  drivers.sch
16DriverOutputHAT/: 16DriverOutputHAT-cache.lib  16DriverOutputHAT.cmp  16DriverOutputHAT.kicad_pcb  16DriverOutputHAT.net  16DriverOutputHAT.pro  16DriverOutputHAT.sch  3PosJumper.mod  README.md
16DriverOutputOpenMRN/: Blink.hxx  Lamp.cxx  Lamp.hxx  Logic.cxx  Logic.hxx  Mast.cxx  Mast.hxx  NODEID.txt  README.md  Rule.cxx  Rule.hxx  TrackCircuit.cxx  TrackCircuit.hxx  config.hxx  main.cxx
16LEDDriver23017SMD/: 16LEDDriver23017SMD-cache.lib  16LEDDriver23017SMD.cmp  16LEDDriver23017SMD.kicad_pcb  16LEDDriver23017SMD.net  16LEDDriver23017SMD.pro  16LEDDriver23017SMD.sch  README.md  bc848.lib  drivers.sch
16PWMLedDriverCape/: 16PWMLedDriverCape-cache.lib  16PWMLedDriverCape.cmp  16PWMLedDriverCape.kicad_pcb  16PWMLedDriverCape.net  16PWMLedDriverCape.pro  16PWMLedDriverCape.sch  CapeEEPROM.sch  PCA9685Driver.sch  README.md  SolderJumpers.mod
16PWMLedDriverHat/: 16PWMLedDriverHat-cache.lib  16PWMLedDriverHat.cmp  16PWMLedDriverHat.kicad_pcb  16PWMLedDriverHat.net  16PWMLedDriverHat.pro  16PWMLedDriverHat.sch  DIP28_700.mod  PCA9685Driver.sch  README.md  SolderJumpers.mod  pca9685.lib
16PWMLedDriverOpenMRN/: Lamp.cxx  Lamp.hxx  Logic.hxx  README.md  Rule.cxx  Rule.hxx  TrackCircuit.cxx  config.hxx  main.cxx
16PWMLedDriverPocketBeagle/: 16PWMLedDriverPocketBeagle-cache.lib  16PWMLedDriverPocketBeagle.cmp  16PWMLedDriverPocketBeagle.kicad_pcb  16PWMLedDriverPocketBeagle.net  16PWMLedDriverPocketBeagle.pro  16PWMLedDriverPocketBeagle.sch  PCA9685Driver.sch  PowerSupply.sch  README.md
ABSWithSiding/: ABSWithSiding.xtc  BufferBoard-1.fzz  BufferBoard-2.fzz  CTCPanelWiring.tex  I2CCape.fzz  ProgTrackControl-1.fzz  ProgTrackControl.fzz  ProgTrackRelayHat.fzz  README.md
BBBCommandStation/: BBBCommandStation-cache.lib  BBBCommandStation.cmp  BBBCommandStation.kicad_pcb  BBBCommandStation.net  BBBCommandStation.pro  BBBCommandStation.sch  CANTransceiver.sch  CapeEEPROM.sch  DualBooster.sch  README.md  TrackPowerSupply.sch  cl2.lib  dpdt.lib  gbu4a.lib  sn75als174.lib  tmp36.lib
BBBCommandStationOpenMRN/: AnalogReadSysFS.c  AnalogReadSysFS.h  AutoPersistCallbackFlow.hxx  BBRailComDriver.hxx  BeagleTrainDatabase.cxx  BeagleTrainDatabase.hxx  CDIHelper.hxx  CommandStationConsole.cxx  CommandStationConsole.hxx  CommandStationDCCMainTrack.cxx  CommandStationDCCMainTrack.hxx  CommandStationDCCPRUTrack.cxx  CommandStationDCCPRUTrack.hxx  CommandStationDCCProgTrack.cxx  CommandStationDCCProgTrack.hxx  CommandStationStack.hxx  DCCProgrammer.cxx  DCCProgrammer.hxx  Doxyfile  DuplexUpdateLoop.cxx  DuplexUpdateLoop.hxx  DuplexedTrackIf.cxx  DuplexedTrackIf.hxx  EStopHandler.cxx  EStopHandler.hxx  ExtendedRingBuffer.hxx  FanControl.cxx  FanControl.hxx  HBridgeControl.cxx  HBridgeControl.hxx  JsonConstants.hxx  Makefile  NODEID.txt  README.md  TractionProxyStack.hxx  TrainSNIP.hxx  config.hxx  main.cxx  pinmux.sh
BBBHalfSiding/: BBBHalfSiding-cache.lib  BBBHalfSiding-temp.sch  BBBHalfSiding.cmp  BBBHalfSiding.kicad_pcb  BBBHalfSiding.net  BBBHalfSiding.pro  BBBHalfSiding.sch  CANBUSDriver.sch  CapeROMSpec.eeprom  README.md  Sensors.sch  Signals.sch  SwitchMotors.sch  cat24c256w.lib
ButtonHat/: ButtonHat-cache.lib  ButtonHat.cmp  ButtonHat.kicad_pcb  ButtonHat.net  ButtonHat.pro  ButtonHat.sch  ButtonHat.tex  ButtonHat_Mouser.csv  HeaderStrips.mod  README.md
CANHat/: CANHat-cache.dcm  CANHat-cache.lib  CANHat.cmp  CANHat.csv  CANHat.kicad_pcb  CANHat.net  CANHat.pro  CANHat.sch  CANHat.tex  CANHat_mouser.csv  (+1 more)
ESP32-C3-BoosterOpenMRNIDF/main/: ADCWrapper.hxx  BootPauseHelper.cpp  BootPauseHelper.hxx  CMakeLists.txt  DelayRebootHelper.hxx  Esp32C3Booster.cpp  EventBroadcastHelper.hxx  FactoryResetHelper.hxx  FanControl.cpp  FanControl.hxx  HBridgeControl.cpp  HBridgeControl.hxx  HealthMonitor.hxx  Kconfig.projbuild  NodeRebootHelper.hxx  cdi.hxx  fs.cpp  fs.hxx  hardware.hxx
ESP32-PWMHalfSidingOpenMRNIDF/components/NvsManager/: BootPauseHelper.cpp  CMakeLists.txt  NvsManager.cpp  StringUtils.cpp
ESP32-PWMHalfSidingOpenMRNIDF/components/NvsManager/include/: BootPauseHelper.hxx  NvsManager.hxx  StringUtils.hxx
ESP32-PWMHalfSidingOpenMRNIDF/components/NvsManager/private_include/: NodeIdMemoryConfigSpace.hxx  WiFiMemoryConfigSpace.hxx
ESP32-PWMHalfSidingOpenMRNIDF/main/: CMakeLists.txt  DelayRebootHelper.hxx  Esp32PCA9685PWM.hxx  EventBroadcastHelper.hxx  FactoryResetHelper.hxx  HealthMonitor.hxx  Kconfig.projbuild  Logic.cpp  Logic.hxx  PCA9685PWM.cpp  Points.hxx  SignalLampTester.hxx  cdi.hxx  esp32pwmhalfsiding.cpp  fs.cpp  hardware.hxx
ESP32-S3-MultiFunctionOpenMRNIDF/components/GeneralIO/: CMakeLists.txt
ESP32-S3-MultiFunctionOpenMRNIDF/components/GeneralIO/include/: Blink.hxx  Button.hxx  LED.hxx  OccupancyDetector.hxx  Points.hxx  VetoBitEventInterface.hxx
ESP32-S3-MultiFunctionOpenMRNIDF/components/Logic/: CMakeLists.txt  TrackCircuit.cpp
ESP32-S3-MultiFunctionOpenMRNIDF/components/Logic/include/: Logic.hxx
ESP32-S3-MultiFunctionOpenMRNIDF/components/Signals/: CMakeLists.txt  Rule.cpp
ESP32-S3-MultiFunctionOpenMRNIDF/components/Signals/include/: Lamp.hxx
(+1988 files in other folders)
